// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card elevationType 0 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 5px;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`Card elevationType 1 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 5px;
  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),0px 1px 1px 0px rgb(0 0 0 / 14%),0px 1px 3px 0px rgb(0 0 0 / 12%);
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`Card elevationType 2 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 5px;
  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),0px 3px 4px 0px rgb(0 0 0 / 14%),0px 1px 8px 0px rgb(0 0 0 / 12%);
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`Card empty snapshot 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 5px;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`Card radius 0 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 0px;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`Card radius 1 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 5px;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`Card radius 2 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 10px;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`Card radius 3 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 15px;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`Card radius 4 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  -webkit-transition: background 150ms ease-out,border 150ms ease-out,-webkit-transform 150ms ease-out;
  transition: background 150ms ease-out,border 150ms ease-out,transform 150ms ease-out;
  border-radius: 20px;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;
